--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <nav class="navbar">
             <a href="#" style="--i:1;" class="active">Home</a>
             <a href="#" style="--i:2;">About</a>
-            <a href="#" style="--i:3;">Skills</a>
+            <a href="#" style="--i:3;">Education</a>
             <a href="#" style="--i:4;">Portfolio</a>
             <a href="#" style="--i:5;">Contact</a>
         </nav>
     </header>
+    <!--Home-->
     <section class="home">
         <div class="home-sci">
             <a href="https://www.facebook.com/quy.sy.14022003"><i class='bx bxl-facebook'></i></a>
@@ -33,7 +34,7 @@
             <p>
                 "Speak less, listen more, react less, observe more"
             </p>
-            <a href="#" class="btn"> Hire me</a>
+            <a href="#" class="btn">Download CV</a>
             <!----   <a href="#" class="btn" style="margin-left: 2%;"> Donate me</a>-->
         </div>
         <div class="home-img">
@@ -46,6 +47,86 @@
             </div>
         </div>
     </section>
+    <!--about design-->
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
+        <div class="about-img">
+            <img src="images/about_me.jpg" alt="" style="width: 60%;">
+            <span class="circle-spin"></span>
+        </div>
+        <div class="about-content">
+            <h3> Frontend Developer!</h3>
+            <p>Hello, I am a student at PTIT, a sociable person. At work, I always want to be challenged with new fields
+                as well as gain experience to improve myself.</p>
+        </div>
+        <div class="btn-box btns">
+            <a href="#" class="btn"> Read Me</a>
+        </div>
+    </section>
+    <!-- skills design-->
+    <section class="education" id="education">
+        <h2 class="heading"> My <span>Journey</span></h2>
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Education</h3>
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
+                            <h3>Bien Hoa - High School for the Gifted</h3>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
+                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
+                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+
+
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
+                            <h3>PTIT - university</h3>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
+                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
+                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="education-column">
+                <h3 class="title">Experience</h3>
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
+                            <h3>Tutor - At home</h3>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
+                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
+                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+
+
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
+                            <h3>Mentor - ILC PTIT</h3>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
+                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
+                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
+<footer>
+</footer>
 
 </html>
