--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="#" style="--i:1;" class="active">Home</a>
             <a href="#" style="--i:2;">About</a>
             <a href="#" style="--i:3;">Education</a>
-            <a href="#" style="--i:4;">Portfolio</a>
-            <a href="#" style="--i:5;">Contact</a>
+            <a href="#" style="--i:4;">Skills</a>
+            <a href="#" style="--i:5;">Portfolio</a>
         </nav>
     </header>
     <!--Home-->
