--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" style="--i:5;">Portfolio</a>
         </nav>
     </header>
-    <!--Home-->
+    <!--Home design-->
     <section class="home">
         <div class="home-sci">
             <a href="https://www.facebook.com/quy.sy.14022003"><i class='bx bxl-facebook'></i></a>
@@ -84,7 +84,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
-                            <h3>PTIT - university</h3>
+                            <h3>PTIT - University</h3>
                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
                                 ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
                                 exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
@@ -99,7 +99,7 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
+                            <div class="year"><i class='bx bxs-calendar'></i>2021-2022</div>
                             <h3>Tutor - At home</h3>
                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
                                 ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
@@ -110,13 +110,66 @@
                     </div>
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
+                            <div class="year"><i class='bx bxs-calendar'></i>2021-2022</div>
                             <h3>Mentor - ILC PTIT</h3>
                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
                                 ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
                                 exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
 
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Skills design-->
+    <section class="skills" id="skills">
+        <h2 class="heading"> My <span> Skills</span></h2>
+        <div class="skills-row">
+            <div class="skills-column">
+                <h3 class="title"> Coding Skills</h3>
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>HTML <span>80%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>CSS <span>80%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>JavaScript <span>65%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>Python <span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills-column">
+                <h3 class="title"> Professional Skills</h3>
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>C/C++ <span>90%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>Java <span>75%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>ReactJS/NodeJS <span>65%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>Git/Github <span>75%</span></h3>
+                            <div class="bar"><span></span></div>
                         </div>
                     </div>
                 </div>
