--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
                             <h3>Bien Hoa - High School for the Gifted</h3>
-                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
-                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
-                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+                            <p> For three years of high school, I studied at Bien Hoa specialized school in Ha Nam
+                                province, the best school in the province. A place with many national and international
+                                achievements.</p>
 
 
                         </div>
@@ -85,9 +85,8 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
                             <h3>PTIT - University</h3>
-                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
-                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
-                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+                            <p> I studied Electronics and Telecommunications thanks to the direct admission method based
+                                on personal achievements.</p>
 
 
                         </div>
@@ -101,9 +100,8 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2021-2022</div>
                             <h3>Tutor - At home</h3>
-                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
-                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
-                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+                            <p> I tutor some college friends and a 10th grader in advanced math and college entrance
+                                exam math.</p>
 
 
                         </div>
@@ -112,11 +110,8 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2021-2022</div>
                             <h3>Mentor - ILC PTIT</h3>
-                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
-                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
-                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
-
-
+                            <p> I participate in supporting book borrowing and returning activities as well as library
+                                access, and organize the annual book fair.</p>
                         </div>
                     </div>
                 </div>
@@ -177,6 +172,41 @@
 
         </div>
     </section>
+
+    <!--Portfolio design-->
+    <section class="education" id="education">
+        <h2 class="heading"> My <span>Portfolio</span></h2>
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Education</h3>
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
+                            <h3>Bien Hoa - High School for the Gifted</h3>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
+                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
+                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+
+
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
+                            <h3>PTIT - University</h3>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
+                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
+                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 <footer>
