--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <header class="header">
         <a href="#" class="logo"> QuyDev &#x1F4BB</a>
         <nav class="navbar">
-            <a href="#" style="--i:1;" class="active">Home</a>
-            <a href="#" style="--i:2;">About</a>
-            <a href="#" style="--i:3;">Education</a>
-            <a href="#" style="--i:4;">Skills</a>
-            <a href="#" style="--i:5;">Portfolio</a>
+            <a href="#home" style="--i:1;" class="active">Home</a>
+            <a href="#about" style="--i:2;">About</a>
+            <a href="#education" style="--i:3;">Education</a>
+            <a href="#skills" style="--i:4;">Skills</a>
+            <a href="#portfolio" style="--i:5;">Portfolio</a>
         </nav>
     </header>
     <!--Home design-->
-    <section class="home">
+    <section class="home" id="home">
         <div class="home-sci">
             <a href="https://www.facebook.com/quy.sy.14022003"><i class='bx bxl-facebook'></i></a>
             <a href="https://www.instagram.com/psq_14/"><i class='bx bxl-instagram'></i></a>
             <a href="https://github.com/Quypham14"><i class='bx bxl-github'></i></a>
         </div>
         <div class="home-content">
-            <h1> Hi, I'm Quy Pham</h1>
+            <h1> Hi, I'm <span>Quy Pham</span></h1>
             <h3> Frontend Developer</h3>
             <p>
                 "Speak less, listen more, react less, observe more"
@@ -174,7 +174,7 @@
     </section>
 
     <!--Portfolio design-->
-    <section class="education" id="education">
+    <section class="portfolio" id="portfolio">
         <h2 class="heading"> My <span>Portfolio</span></h2>
         <div class="education-row">
             <div class="education-column">
@@ -206,7 +206,15 @@
             </div>
         </div>
     </section>
-
+    <!--footer design-->
+    <footer class="footer">
+        <div class="footer-text">
+            <p> Copyright &copy; 2023 by QuyPham14</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#"><i class='bx bxs-chevrons-up'></i></a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 <footer>
