--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="#" class="btn"> Read Me</a>
         </div>
     </section>
-    <!-- skills design-->
+    <!-- education design-->
     <section class="education" id="education">
         <h2 class="heading"> My <span>Journey</span></h2>
         <div class="education-row">
@@ -75,8 +75,7 @@
                             <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
                             <h3>Bien Hoa - High School for the Gifted</h3>
                             <p> For three years of high school, I studied at Bien Hoa specialized school in Ha Nam
-                                province, the best school in the province. A place with many national and international
-                                achievements.</p>
+                                province, the best school in the province.</p>
 
 
                         </div>
