--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>
                 "Speak less, listen more, react less, observe more"
             </p>
-            <a href="#" class="btn">Download CV</a>
+            <a href="CV.pdf" class="btn">Download CV</a>
             <!----   <a href="#" class="btn" style="margin-left: 2%;"> Donate me</a>-->
         </div>
         <div class="home-img">
@@ -60,7 +60,7 @@
                 as well as gain experience to improve myself.</p>
         </div>
         <div class="btn-box btns">
-            <a href="#" class="btn"> Read Me</a>
+            <a href="CV.pdf" class="btn"> Read Me</a>
         </div>
     </section>
     <!-- education design-->
@@ -183,22 +183,15 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2018-2021</div>
                             <h3>Bien Hoa - High School for the Gifted</h3>
-                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
-                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
-                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
-
-
+                            <p> I once won an incentive award for computer programming at the provincial level.</p>
                         </div>
                     </div>
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
                             <h3>PTIT - University</h3>
-                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum, expedita
-                                ratione, dicta vel, sint eveniet placeat ut sequi reprehenderit doloribus cum
-                                exercitationem fugiat ea nam. Fugit, quisquam? Dolorem, accusamus.</p>
-
-
+                            <p> Won the consolation prize in the "Future Library" writing contest at the reading
+                                festival. Received a certificate of merit from IIG for English learning achievements.</p>
                         </div>
                     </div>
                 </div>
