--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                             <div class="year"><i class='bx bxs-calendar'></i>2021-Now</div>
                             <h3>PTIT - University</h3>
                             <p> Won the consolation prize in the "Future Library" writing contest at the reading
-                                festival. Received a certificate of merit from IIG for English learning achievements.</p>
+                                festival. Received a certificate of merit from IIG for English learning achievements.
+                            </p>
                         </div>
                     </div>
                 </div>
