--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="home-content">
             <h1> Hi, I'm <span>Quy Pham</span></h1>
-            <h3> Frontend Developer</h3>
+            <h3> Developer</h3>
             <p>
                 "Speak less, listen more, react less, observe more"
             </p>
@@ -55,7 +55,7 @@
             <span class="circle-spin"></span>
         </div>
         <div class="about-content">
-            <h3> Frontend Developer!</h3>
+            <h3> Developer!</h3>
             <p>Hello, I am a student at PTIT, a sociable person. At work, I always want to be challenged with new fields
                 as well as gain experience to improve myself.</p>
         </div>
